--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,27 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
+parameters:
+- name: image
+  displayName: 'Pool image'
+  default: ubuntu-latest
+  values:
+  - windows-latest
+  - windows-latest
+  - ubuntu-latest
+  - ubuntu-latest
+  - macOS-latest
+  - macOS-latest
+- name: test
+  displayName: Run Tests?
+  type: boolean
+  default: false
+
+variables:
+- group: "Contoso Variable Group"
+- name: va
+  value: $[variables.a]
+- name: vb
+  value: $[variables.b]
+- name: vcontososecret
+  value: $[variables.contososecret]
 
 trigger:
 - master
@@ -10,13 +30,32 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+- script: |
+    echo "Hello, world!"
+    echo "Pool image: ${{ parameters.image }}"
+    echo "Run tests? ${{ parameters.test }}"
+  displayName: 'Show runtime parameter values'
+
+- script: |
+    echo "a=$(va)"
+    echo "b=$(vb)"
+    echo "contososecret=$(vcontososecret)"
+    echo
+    echo "Count up to the value of the variable group's nonsecret variable *a*:"
+    for number in {1..$(va)}
+    do
+        echo "$number"
+    done
+    echo "Count up to the value of the variable group's nonsecret variable *b*:"
+    for number in {1..$(vb)}
+    do
+        echo "$number"
+    done
+    echo "Count up to the value of the variable group's secret variable *contososecret*:"
+    for number in {1..$(vcontososecret)}
+    do
+        echo "$number"
+    done
+  displayName: 'Test variable group variables (secret and nonsecret)'
+  env:
+    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
